<resources>
    <string name="app_name">ImageSliderApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="offers_title">Offers</string>
    <string name="myorders_title">Orders</string>
    <string name="profile_title">Profile</string>
    <!--    <string name="offers">Offers</string>-->
    <string name="see_all">See all Offers</string>
    <string name="add">Add</string>

    <!--    search product-->
    <string name="hint_search_product">Search product</string>
    <string name="please_wait">Please wait</string>
    <string name="results_found">Results found</string>

    <!--    my cart-->
    <string name="sub_total">Sub total</string>
    <string name="delivery_charges">Delivery charges</string>
    <string name="last_min_buys">Last Minute Buys</string>
    <string name="promo_code_can_be">Promo code can be applied on payment page</string>
    <string name="proceed_to_checkout">Proceed to check out</string>

    <!--    login-->
    <string name="login_title">Login</string>
    <string name="we_will_send">We will send a SMS with a Confirmation code to the Number</string>
    <string name="next">Next</string>
    <string name="please_neter_code">Please enter 4 digit code sent on number </string>
    <string name="verify">Verify</string>
    <string name="resend_in">Resend in </string>
    <string name="sec">Sec</string>
    <string name="resend_code">Resend Code</string>

    <!--    address date and time-->
    <string name="address_date_time_title">Address, Date and Time</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_date_time">Delivery Date and Time</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="select_date_time">Select date and time</string>

    <!--    address-->
    <string name="choose_address">Choose Address</string>
    <string name="add_new_address">Add new address</string>

    <!--    add address-->
    <string name="add_address">Add address</string>
    <string name="update_address">Update address</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="miss">Miss.</string>
    <string name="name">Name</string>
    <string name="fname">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="flat_house_office">Flat, House, Office No, Building, Company</string>
    <string name="area_colony_sector">Area, Colony, Sector, Street</string>
    <string name="city">City</string>
    <string name="nik_name_of_address">Nickname of your address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="others">Others</string>
    <string name="continu">Continue</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="mobileno">Cell no</string>

    <!--    //maps-->
    <string name="done">Done</string>
    <string name="places_api_billing_key" translatable="false">AIzaSyCjk-Jj4fqS9nE1r5EbXiu63tPaMpptOMs</string>
    <string name="google_maps_key">AIzaSyCGo07mZGu4mR1EuHwfwOUqqlcgU_ldjyE</string>
    <string name="permission_denied">Permissions denied</string>


    <!--    pic bottom sheet-->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_photo">Profile photo</string>


    <!--    my orders-->
    <string name="my_orders_title">My Orders</string>
    <string name="processed">Processed Orders</string>
    <string name="pending">Pending Orders</string>
    <string name="benificier">Beneficiary</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="pending_order">Pending</string>
    <string name="complete_order">Completed</string>
    <string name="cancel_order">Cancel</string>

    <!--    offers-->
    <string name="offers">Offers</string>

    <!--    error alert dialog message-->
    <!--    alerter-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alert_information">Error</string>
    <string name="msg_enable_gps">Please enable GPS!</string>
    <string name="success">Success</string>
    <string name="error">Error</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure to logout?</string>
    <string name="exit_app">Exit Application?</string>
    <string name="english">English</string>
    <string name="swedish">Swedish</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="comment">Comment</string>

    <string name="cell_number_error">Phone number length must not be less than 10</string>
    <string name="cell_number_start_error">Phone number must start with 3</string>
    <string name="empty_cellno">Phone number is required</string>
    <string name="empty_email">Email is required</string>
    <string name="empty_name">Name is required</string>
    <string name="empty_verificationCode">Verification code is required</string>


    <string name="empty_last_name">Last name is required</string>
    <string name="empty_address">Address is required</string>
    <string name="empty_flat_house">Flat, House, Office is required</string>
    <string name="empty_area_colony_sector">Area, colony, sector is required</string>
    <string name="empty_city">City is required</string>
    <string name="empty_profile">Profile image is required</string>

    <string name="emai_error">Please enter valid email</string>
    <string name="verification_code_error">Please enter 4 digits</string>
    <string name="address_type_error">Please select one of address nickname</string>


    <!--    place order-->
    <string name="place_order_title">Place order</string>
    <string name="amount_payable">Amount payable</string>
    <string name="include_taxes">(inc all taxes)</string>
    <string name="add_promo_code">Add promo code and offers</string>

    <!--    // drawer-->
    <string name="my_information">Account details</string>
    <string name="login">Login</string>
    <string name="update_profile">Update profile</string>
    <string name="my_addresses">Addresses</string>
    <string name="my_cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_language">Language</string>

    <string name="others_nav">Others</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="release">App Release</string>
    <string name="sign_out">Sign Out</string>
    <string name="eng">Eng</string>
    <string name="swed">Sv</string>

    <!--    //orderSuccessActivity-->

    <string name="order_placed_successfully">Yay! Order Successfully Placed </string>
    <string name="schedule_del_date_time">Schedule delivery date and time</string>
    <string name="store_price_guarrantee">Store price guarantee</string>
    <string name="replacement_guarantee">100 % Replacement Guarantee(Terms  &amp; Conditions) </string>

<!--   cancel order-->
    <string name="order_has_been_failed">Sorry! Your Order has been Failed</string>
    <string name="continu_shoping">Continue Shopping</string>

<!--    rating dialog-->
    <string name="did_you_like_app">Did you like the app</string>
    <string name="let_us_know">Let us know what you think?</string>
</resources>
