<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">

            <TextView
                android:textSize="@dimen/_13sdp"
                style="@style/textview_styles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/profile_photo"
                android:textColor="@color/orange" />
        </RelativeLayout>

        <ImageView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/light_grey" />

        <RelativeLayout
            android:id="@+id/relCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvCamera"
                    style="@style/textview_styles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/camera"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/tvGallery"
                    style="@style/textview_styles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/gallery"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/light_grey" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvCancel"
                style="@style/textview_styles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/_13sdp" />

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>